feat: add polygon and fantom test net
