# swagger.yml
@@ -590,6 +590,12 @@ definitions:
       bsc_chain_id:
         type: integer
         x-omitempty: false
+      polygon_chain_id:
+        type: integer
+        x-omitempty: false
+      fantom_chain_id:
+        type: integer
+        x-omitempty: false
       eth_erc_721_swap_agent:
         type: string
         x-omitempty: false
@@ -600,5 +606,17 @@ definitions:
         type: string
         x-omitempty: false
       bsc_erc_1155_swap_agent:
+        type: string
+        x-omitempty: false
+      polygon_erc_721_swap_agent:
+        type: string
+        x-omitempty: false
+      polygon_erc_1155_swap_agent:
+        type: string
+        x-omitempty: false
+      fantom_erc_721_swap_agent:
+        type: string
+        x-omitempty: false
+      fantom_erc_1155_swap_agent:
         type: string
         x-omitempty: false
